syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";
import public "Pattern.proto";

message PatternCreated {
    string source_id = 1;
    Pattern pattern = 2;
    string owner_id = 3;
}
