syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";

message StitchActionData {
    string patternId = 1;
    repeated StitchCoordinates stitches = 2;
}

message MarkStitches {
    repeated StitchCoordinates stitches = 1;
}

message UnmarkStitches {
    repeated StitchCoordinates stitches = 1;
}

message StitchCoordinates {
    uint32 X = 1;
    uint32 Y = 2;
}

